--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "psvelte",
   "version": "0.1.0",
-  "main": "index.js",
   "repository": "https://github.com/L-Chris/psvelte",
   "author": "<563303226@qq.com>",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-sucrase": "^3.1.0",
     "@types/node": "^14.14.28",
+    "rollup": "^2.39.0",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
   "scripts": {
-    "tsc": "tsc"
+    "build": "rollup -c && npm run tsd",
+    "tsd": "tsc -p src/runtime --emitDeclarationOnly && tsc -p src/compiler --emitDeclarationOnly"
   }
 }
