--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@rollup/plugin-sucrase": "^3.1.0",
     "@rollup/pluginutils": "^4.1.0",
     "@types/node": "^14.14.28",
+    "estree-walker": "^3.0.0",
     "rollup": "^2.39.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.5"
   },
-	"dependencies": {
-		"psvelte": "file:./dist"
-	},
+  "dependencies": {
+    "psvelte": "file:./dist"
+  },
   "scripts": {
     "dev": "cd example && rollup -c -w",
     "build": "rollup -c && npm run tsd",
