--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "psvelte": "file:./dist"
+    "psvelte": "file:dist"
   },
   "scripts": {
     "dev": "cd example && rollup -c -w",
